<resources>
    <string name="app_name">Set Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="start_countdown">Start</string>
    <string name="stop_countdown">Stop</string>
    <string name="reset_sets">Reset</string>
    <string name="clock">Clock</string>
    <string name="sets">Sets</string>
    <string name="set_time_hint">Countdown Time</string>
    <string name="set_threshold_hint">Warning Time</string>
    <string name="set_time_ok">OK</string>
    <string name="set_time_cancel">Cancel</string>
    <string name="set_singular">Set</string>
    <string name="set_plural">Sets</string>
    <string name="countdown_time_save_key">CountdownTime</string>
    <string name="threshold_time_save_key">ThresholdTime</string>
    <string name="sets_save_key">Sets</string>
    <string name="seconds_short">s</string>
    <string name="minutes_short_singular">min</string>
    <string name="minutes_short_plural">mins</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="drink_button_description">Drink is ready</string>
    <string name="volume_save_key">volume</string>
    <string name="drink_delay_save_key">countdownTime</string>
    <string name="set_drink_delay_hint">Drink Delay</string>
    <string name="drink_delay_start_time_save_key">drinkDelayStart</string>
    <string name="countdown_start_time_save_key">countdownStart</string>
    <string name="countdown_running_save_key">countdownRunning</string>
    <string name="drink_delay_running_save_key">drinkDelayRunning</string>
    <string name="round_countdown_repeating_save_key">roundCountdownRepeating</string>
    <string name="repeat">Repeat</string>
</resources>
