<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/volume_plus_button"
            android:layout_width="@dimen/drink_button_size"
            android:layout_height="@dimen/drink_button_size"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/volume_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/clock_set_size" />

        <Button
            android:id="@+id/volume_minus_button"
            android:layout_width="@dimen/drink_button_size"
            android:layout_height="@dimen/drink_button_size"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock"
            android:textSize="@dimen/clock_size" />

        <TextView
            android:id="@+id/sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="@dimen/sets_size" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/drink_button"
        android:layout_width="@dimen/drink_button_size"
        android:layout_height="@dimen/drink_button_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/drink_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/drink" />

    <!--<TextView-->
    <!--android:id="@+id/drink_countdown"-->
    <!--android:layout_width="@dimen/drink_button_size"-->
    <!--android:layout_height="@dimen/drink_button_size"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:gravity="center"-->
    <!--android:text="100\nmins" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_countdown"
            android:textSize="@dimen/sets_size" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_sets"
            android:textSize="@dimen/sets_size" />

    </LinearLayout>

</RelativeLayout>
